1、增大 拨号按钮

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -84,7 +84,7 @@
     <string name="item_lable_call_cm">拨移动</string>
     
     <string name="dialing">拨号中...</string>
-    <string name="dial_hint">点左边按钮测试</string>
+    <string name="dial_hint">点按钮测试</string>
     <string name="incall">通话中...</string>
         
 </resources>
